fix the toc title overwrapping on toc links in the flyout

--- a/assets/scss/03-organisms/_sticky-toc.scss
+++ b/assets/scss/03-organisms/_sticky-toc.scss
@@ -540,6 +540,13 @@
         position: fixed;
         z-index: 9999;
       }
+
+      @media ($bp-medium-max) {
+
+        & + .ma__sticky-toc__link {
+          margin-top: 75px;
+        }
+      }
     }
   }
 }
